jremove add-open